--- a/app/views/certificates/index.html.erb
+++ b/app/views/certificates/index.html.erb
@@ -33,4 +33,5 @@
   </tbody>
 </table>
 
-<%= link_to 'Add new certificate', new_certificate_path, :class => 'btn btn-primary' %>
+<%= link_to 'Add new certificate', new_certificate_path, :class => 'btn btn-dark' %>
+<br><br>
