changed program to subject

--- a/app/views/certificates/new.html.erb
+++ b/app/views/certificates/new.html.erb
@@ -4,8 +4,8 @@
 <%= form_tag certificates_path, :class => 'form' do %>
   <%= label :certificate, :name, 'Name', :class => 'col-form-label' %>
   <%= text_field :certificate, :name, :class => 'form-control' %>
-  <%= label :certificate, :program, 'Program', :class => 'col-form-label' %>
-  <%= text_field :certificate, :program, :class => 'form-control' %>
+  <%= label :certificate, :subject, 'Subject', :class => 'col-form-label' %>
+  <%= text_field :certificate, :subject, :class => 'form-control' %>
   <%= label :certificate, :website, 'Website', :class => 'col-form-label' %>
   <%= text_field :certificate, :website, :class => 'form-control' %>
   <%= label :certificate, :school, 'School', :class => 'col-form-label'  %>
