--- a/app/views/layouts/_flash.erb
+++ b/app/views/layouts/_flash.erb
@@ -1,5 +1,5 @@
 <% if flash[:notice] %>
-  <div class="alert alert-info" role="alert" id="notice">
+  <div class="alert alert-success" role="alert" id="notice">
     <%= flash[:notice] %>
   </div>
 <% elsif flash[:warning] %>
