--- a/app/views/certificates/index.html.erb
+++ b/app/views/certificates/index.html.erb
@@ -34,4 +34,5 @@
 </table>
 
 <%= link_to 'Add new certificate', new_certificate_path, :class => 'btn btn-dark' %>
+<%= link_to 'Login', new_user_path, :class => 'btn btn-dark' %>
 <br><br>
