consistently pass the same number of tests with clean db

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,5 +12,5 @@
 
   <br/>
   <%= submit_tag 'Sign Up', :class => 'btn btn-primary' %>
-  <%= link_to 'Cancel', new_session_path, :class => 'btn btn-secondary' %>
+  <%= link_to 'Cancel', certificates_path, :class => 'btn btn-secondary' %>
 <% end %>
