--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,18 +16,21 @@
     </tr>
   </thead>
   <tbody class="table-light">
-    <% Bookmark.get_bookmarks(@user).each do |certificate| %>
-      <tr>
-        <td class="h6">
-          <%= certificate.name %>
-        </td>
-        <td class="h6">
-          <%= certificate.username %>
-        </td>
-        <td class="h6">
-          <%= certificate.password %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
+  <% @certificates.each do |certificate| %>
+    <tr>
+      <td class="h6">
+        <%= certificate.name %>
+      </td>
+      <td class="h6">
+        <%= certificate.school %>
+      </td>
+      <td class="h6">
+        <%= certificate.subject %>
+      </td>
+      <td class="h6">
+        <%= link_to "More about #{certificate.name}", certificate_path(certificate) ,class: "btn btn-outline-secondary col-12"%>
+      </td>
+    </tr>
+  <% end %>
+</tbody>
 </table>
