--- a/app/views/certificates/show.html.erb
+++ b/app/views/certificates/show.html.erb
@@ -32,10 +32,10 @@
   <% if @bookmarked %>
     <h5>Bookmarked!</h5>
   <% else %>
-    <h5>Add to Bookmarks </h5>
-    <p id="bookmarks">
-    <%= link_to 'Create Bookmark', new_bookmark_path(:certificate_id => @certificate.id), :class => 'btn btn-dark', remote: true %>
-    </p>
+    <%= form_tag bookmarks_path, :class => 'form' do %>
+      <%= text_field :bookmarks, :certificate_id, :class => 'form-control', :value =>"#{@certificate.id}", :type => 'hidden' %>
+      <%= submit_tag 'Add to Bookmarks', :class => 'btn btn-primary' %>
+    <% end %>
   <% end %>
   </li>
 
