--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,9 +7,9 @@
   <%= label :user, :username, 'Username', :class => 'col-form-label' %>
   <%= text_field :user, :username, :class => 'form-control' %>
   <%= label :user, :password, 'Password', :class => 'col-form-label' %>
-  <%= text_field :user, :password, :class => 'form-control' %>
+  <%= text_field :user, :password, :class => 'form-control', :type => 'password' %>
 
   <br/>
   <%= submit_tag 'Sign Up', :class => 'btn btn-primary' %>
-  <%= link_to 'Cancel', new_session_path, :class => 'btn btn-secondary' %>
+  <%= link_to 'Cancel', login_url, :class => 'btn btn-secondary' %>
 <% end %>
