--- a/app/views/certificates/index.html.erb
+++ b/app/views/certificates/index.html.erb
@@ -1,12 +1,14 @@
 <!--  This file is app/views/certificates/index.html.erb -->
 <br>
 <h2>All Certificates</h2>
+
 <br>
 <style>
 .hilite{
   background-color: grey;
 }
 </style>
+
 
 <table class="table col-md-12" id="certificates">
   <thead class="table-dark">
@@ -21,16 +23,25 @@
       <th>More Information</th>
     </tr>
   </thead>
+
   <%= form_tag certificates_path, method: :get, id: 'schools_form' do %>
-  Include:
-  <% @all_schools.each do |school| %>
-    <div class="form-check  form-check-inline">
-      <%= label_tag "schools[#{school}]", school, class: 'form-check-label' %>
-      <%= check_box_tag "schools[#{school}]", "1",  @schools_to_show.include?(school), class: 'form-check-input', id: "schools_#{school}" %>
-    </div>
-  <% end %>
-  <%= submit_tag 'Refresh', id: 'schools_submit', class: 'btn btn-dark btn-sm' %>
+  Include Certificates from:
+  <%= select_tag :schools,
+                  options_from_collection_for_select(@schools,'name','name',  @schools_to_show),
+                  multiple: true%>
+
+
+
+
+
+
+Include Subjects:
+<%= select_tag :subjects,
+                options_from_collection_for_select(@subjects,'name','name',  @subjects_to_show),
+                multiple: true%>
+<%= submit_tag 'Refresh', id: 'sub_submit', class: 'btn btn-dark btn-sm' %>
 <% end %>
+
 
   <tbody class="table-light">
     <% @certificates.each do |certificate| %>
