--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,8 @@
     <%# These classes come from the Bootstrap CSS framework. %>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Certipedia: Just Certify Yourself!</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+
+        <%= link_to "Certipedia: Just Certify Yourself!", certificates_path({:schools => [""],:subjects => [""]}),:class=>"nav-item"%>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <% if session[:admin] == true %>
