--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
 
-        <%= link_to "Certipedia: Just Certify Yourself!", certificates_path({:schools => [""],:subjects => [""]}),:class=>"nav-item"%>
+        <%= link_to "Certipedia: Just Certify Yourself!", certificates_path({:schools => [""],:subjects => [""]}),:class=>"nav-item link-light text-decoration-none h3"%> 
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <% if session[:admin] == true %>
