--- a/app/views/certificates/show.html.erb
+++ b/app/views/certificates/show.html.erb
@@ -8,7 +8,7 @@
   </li>
   <br>
   <li>
-    <h5>Program: </h5>
+    <h5>Subject: </h5>
     <p id="description">
     <%= @certificate.subject %>
     </p>
