--- a/app/views/certificates/index.html.erb
+++ b/app/views/certificates/index.html.erb
@@ -16,7 +16,7 @@
       <th>
         <%= link_to 'Certificate Name', certificates_path(:sort => 'name'), id:'name_header', class:[@name_header, 'link-light', 'text-decoration-none', 'hover-eff'] %>
       </th>
-      <th>School</th>
+      <th><%= link_to 'School', certificates_path(:sort => 'school'), id:'school_header', class:[@school_header, 'link-light', 'text-decoration-none', 'hover-eff'] %></th>
       <th>
         <%= link_to 'Subject Area', certificates_path(:sort => 'subject'), id:'subject_header', class:[@subject_header, 'link-light', 'text-decoration-none', 'hover-eff'] %>
       </th>
