--- a/app/views/certificates/show.html.erb
+++ b/app/views/certificates/show.html.erb
@@ -1,10 +1,11 @@
 <!--  app/views/movies/show.html.erb -->
+<br>
 <h2><%= @certificate.name %> </h2>
 <br>
 <ul id="details">
   <li>
      <h5>School: </h5> <%= @certificate.school %>
-
+     <p>Learn more about the school <a class="link-secondary" href=<%= @certificate.origin %>>here</a></p>
   </li>
   <br>
   <li>
@@ -17,14 +18,7 @@
   <li>
     <h5>Program Website: </h5>
     <p id="description">
-    <a href=<%= @certificate.website %>><%= @certificate.website %></a>
-    </p>
-  </li>
-
-  <li>
-    <h5>Learn More About the School: </h5>
-    <p id="description">
-    <a href=<%= @certificate.origin %>><%= @certificate.origin %></a>
+    <p>Learn more about the program <a class="link-secondary" href=<%= @certificate.website %>>here</a></p>
     </p>
   </li>
 
